--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">MyActivity</string>
     <string name="activity_chooser_text">If your NFC is enabled and any other NFC enabled device is in the range, then
-        you will get an activity chooser dialog
+        you will get an activity chooser dialog. If you want to see the demo of how "hifive" works, click on the demo button.
     </string>
 </resources>
